--- a/SistemaServicioSocial/SistemaServicioSocial-war/web/solicitud/listFormulario.xhtml
+++ b/SistemaServicioSocial/SistemaServicioSocial-war/web/solicitud/listFormulario.xhtml
@@ -11,53 +11,54 @@
         <h:form>
             <b:form>
                 <p:panel header="Formularios" toggleable="true">
-                    <b:dataTable>
+                    <b:dataTable value="#{formularioBean.listSsFormulario}" var="formulario">
                         <b:dataTableColumn label="Formulario">
+                            <h:outputText value="#{formulario.nombre}"/>
                         </b:dataTableColumn>
                         <b:dataTableColumn label="Descripcion">
+                            <h:outputText value="#{formulario.descripcion}"/>
                         </b:dataTableColumn>
                         <b:dataTableColumn label="Tipo Formulario">
+                            <h:outputText value="#{formulario.codInstitucion}"/>
                         </b:dataTableColumn>
                         <b:dataTableColumn label="Estado">
+                            <h:outputText value="#{formulario.estado}"/>
                         </b:dataTableColumn>
                     </b:dataTable>
-                    <b:commandButton value="Agregar" iconAwesome="fa-plus" onclick="$('.modalNewForm').modal();return false;"/>
+                    <b:commandButton value="Agregar" iconAwesome="fa-plus" onclick="$('.modalNewForm').modal();return false;" action="#{formularioBean.formulario()}"/>
                     <b:commandButton value="Modificar" iconAwesome="fa-pencil"/>
-                    <b:commandButton value="Eliminar" iconAwesome="fa-trash"/>
-                    <p:dialog header="Modal Dialog" widgetVar="dlg2" modal="true" height="100">
-                        <h:outputText value="This is a Modal Dialog." />
-                    </p:dialog>
+                    <b:commandButton value="Eliminar" iconAwesome="fa-trash"/>                    
                     <b:modal id="amodal" title="Nuevo Formulario" styleClass="modalNewForm"
                              closable="false" close-on-escape="false" backdrop="false">
                         <h:form id="lfFormulario">
                             <h:panelGrid columns="2" cellpadding="5" style="margin-bottom:10px">
                                 <p:outputLabel value="Nombre Formulario:"/>
-                                <b:inputText id="lfNombreForm" size="80"/>
+                                <b:inputText id="lfNombreForm" size="80" value="#{formularioBean.ssFormulario.nombre}"/>
                                 <p:outputLabel value="Descripcion: "/>
-                                <b:inputText id="lfDescripcionForm"/>
+                                <b:inputText id="lfDescripcionForm" value="#{formularioBean.ssFormulario.descripcion}"/>
                                 <p:outputLabel value="Tipo Formulario: "/>
-                                <b:selectOneMenu renderLabel="true" required="true" requiredMessage="Please provide the form of address.">
+                                <b:selectOneMenu renderLabel="true" value="#{formularioBean.ssFormulario.codInstitucion}" required="true" requiredMessage="Please provide the form of address.">
                                     <f:facet name="append">
                                         <b:iconAwesome name="list"/>
                                     </f:facet>
                                     <f:selectItem itemLabel="- Seleccionar - " />
-                                    <f:selectItem itemLabel="Instituciones" />
-                                    <f:selectItem itemLabel="Campus" />
-                                    <f:selectItem itemLabel="Instructoria" />
+                                    <f:selectItem itemLabel="Instituciones" itemValue="1"/>
+                                    <f:selectItem itemLabel="Campus" itemValue="2"/>
+                                    <f:selectItem itemLabel="Instructoria" itemValue="3"/>
                                 </b:selectOneMenu>
                                 <p:outputLabel value="Estado:"/>
-                                <b:selectOneMenu renderLabel="true" required="true" requiredMessage="Please provide the form of address.">
+                                <b:selectOneMenu renderLabel="true" value="#{formularioBean.ssFormulario.estado}" required="true" requiredMessage="Please provide the form of address.">
                                     <f:facet name="append">
                                         <b:iconAwesome name="list"/>
                                     </f:facet>
-                                    <f:selectItem itemLabel="Activo" />
-                                    <f:selectItem itemLabel="Inactivo" />
+                                    <f:selectItem itemLabel="Activo" itemValue="A"/>
+                                    <f:selectItem itemLabel="Inactivo" itemValue="I"/>
                                 </b:selectOneMenu>
                             </h:panelGrid>   
-                        </h:form>            
+                        </h:form>  
                         <f:facet name="footer">
-                            <b:commandButton value="Cancelar" onclick="return false;" iconAwesome="fa-close" look="danger" ajax="true" update="@form"/>
-                            <b:commandButton value="Guardar" look="success" onclick="return false;" icon="glyphicon glyphicon-floppy-saved"/>
+                            <b:button value="Cancelar" look="danger" onclick="return false;" iconAwesome="fa-close" dismiss="modal"/>
+                            <b:commandButton value="Guardar" look="success" icon="glyphicon glyphicon-floppy-saved" action="#{formularioBean.saveSsFormulario()}" size="sm"/>                            
                         </f:facet>
                     </b:modal>
                 </p:panel>
@@ -72,10 +73,56 @@
                         <b:dataTableColumn label="Estado">
                         </b:dataTableColumn>
                     </b:dataTable>
-                    <b:commandButton value="Agregar" iconAwesome="fa-plus"/>
+                    <b:commandButton value="Agregar" iconAwesome="fa-plus" onclick="$('.modalNewCampo').modal();return false;"/>
                     <b:commandButton value="Modificar" iconAwesome="fa-pencil"/>
                     <b:commandButton value="Eliminar" iconAwesome="fa-trash"/>
                 </p:panel>
+                <b:modal id="amodal" title="Campo Formulario" styleClass="modalNewCampo"
+                         closable="false" close-on-escape="false" backdrop="false">
+                    <h:form id="lfCampoFormulario">
+                        <h:panelGrid columns="2" cellpadding="5" style="margin-bottom:10px">
+                            <p:outputLabel value="Nombre Formulario:"/>
+                            <b:inputText id="cpNombreForm" size="80" value="#{formularioBean.ssCampoFormulario.etiqueta}"/>
+                            <p:outputLabel value="Descripcion: "/>
+                            <b:inputText id="cpDescripcion" value="#{formularioBean.ssCampoFormulario.descripcion}"/>
+                            <p:outputLabel value="Ayuda: "/>
+                            <b:inputText id="cpAyuda" value="#{formularioBean.ssCampoFormulario.ayuda}"/>
+                            <p:outputLabel value="Mascara: "/>
+                            <b:inputText id="cpMascara" value="#{formularioBean.ssCampoFormulario.mascara}"/>
+                            <p:outputLabel value="Requerido?: "/>
+                            <b:selectOneMenu id="cpMascara" value="#{formularioBean.ssCampoFormulario.esCampoRequerido}">
+                                <f:facet name="append">
+                                    <b:iconAwesome name="list"/>
+                                </f:facet>
+                                <f:selectItem itemLabel="- Seleccionar -" />
+                                <f:selectItem itemLabel="Si" itemValue="S"/>
+                                <f:selectItem itemLabel="No" itemValue="N"/>
+                            </b:selectOneMenu>
+                            <p:outputLabel value="Tipo Campo: "/>
+                            <b:selectOneMenu renderLabel="true" value="#{formularioBean.ssCampoFormulario.codTipoCampo}" required="true" requiredMessage="Please provide the form of address.">
+                                <f:facet name="append">
+                                    <b:iconAwesome name="list"/>
+                                </f:facet>
+                                <f:selectItem itemLabel="- Seleccionar - " />
+                                <f:selectItem itemLabel="Instituciones" itemValue="1"/>
+                                <f:selectItem itemLabel="Campus" itemValue="2"/>
+                                <f:selectItem itemLabel="Instructoria" itemValue="3"/>
+                            </b:selectOneMenu>
+                            <p:outputLabel value="Estado:"/>
+                            <b:selectOneMenu renderLabel="true" value="#{formularioBean.ssFormulario.estado}" required="true" requiredMessage="Please provide the form of address.">
+                                <f:facet name="append">
+                                    <b:iconAwesome name="list"/>
+                                </f:facet>
+                                <f:selectItem itemLabel="Activo" itemValue="A"/>
+                                <f:selectItem itemLabel="Inactivo" itemValue="I"/>
+                            </b:selectOneMenu>
+                        </h:panelGrid>   
+                    </h:form>  
+                    <f:facet name="footer">
+                        <b:button value="Cancelar" look="danger" onclick="return false;" iconAwesome="fa-close" dismiss="modal"/>
+                        <b:commandButton value="Guardar" look="success" icon="glyphicon glyphicon-floppy-saved" action="#{formularioBean.saveSsFormulario()}" size="sm"/>                            
+                    </f:facet>
+                </b:modal>
             </b:form>
         </h:form>
     </ui:define>
