--- a/SistemaServicioSocial/SistemaServicioSocial-war/web/index.xhtml
+++ b/SistemaServicioSocial/SistemaServicioSocial-war/web/index.xhtml
@@ -4,44 +4,55 @@
                 xmlns:b="http://bootsfaces.net/ui"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:hf="http://highfaces.org" >
+                xmlns:hf="http://highfaces.org" 
+                xmlns:p="http://primefaces.org/ui"
+                xmlns="http://www.w3.org/1999/xhtml">
 
     <ui:define name="content">
         <h:form>
-            <h1>Dashboard</h1>
-            <b:form>
+            <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript" ></script>
+            <h:body>
+                <h1>Dashboard</h1>
+
                 <h:outputLabel>Busqueda por fecha</h:outputLabel>
+                <h:panelGrid id="grid" columns="2" cellpadding="5">
+                    <b:row>
+                        <b:column>
+                            <b:datepicker placeholder="Fecha Inicio"/>
+                        </b:column>
+                        <b:column>
+                            <b:datepicker placeholder="Fecha fin"/>
+                        </b:column>
+                        <b:column>
+                            <b:button value="Buscar" look="success" icon="glyphicon glyphicon-search"/>
+                        </b:column>
+                    </b:row>
+                </h:panelGrid>
                 <b:row>
-                    <b:column>
-                        <b:datepicker placeholder="Fecha Inicio" style="width:200px;"/>
-                    </b:column>
-                    <b:column>
-                        <b:datepicker placeholder="Fecha fin" style="width:200px;"/>
-                    </b:column>
-                    <b:column>
-                        <b:button value="Buscar" look="success" icon="glyphicon glyphicon-search"/>
+                    <b:column small-screen="two-thirds">
+                        <hf:chart title="Lista de proyectos" xaxisLabel="Año" yaxisLabel="Cantidad" type="pie">
+                            <hf:chartSerie name="Activos"
+                                           type="#{dashBoardManagedBean.boysType}"
+                                           value="#{lineChartBean.boys}"
+                                           var="point"
+                                           point="#{point.amount}" 
+                                           tickLabel="#{point.year}"/>
+                            <hf:chartSerie colorByPoint="true"
+                                           type="#{dashBoardManagedBean.girlsType}"
+                                           name="Finalizados"
+                                           value="#{lineChartBean.girls}"
+                                           var="point"
+                                           point="#{point.amount}"  />
+                        </hf:chart>                     
                     </b:column>
                 </b:row>
-            </b:form>
-            <b:row>
-                <b:column small-screen="two-thirds">
-                    <hf:chart title="Lista de proyectos" xaxisLabel="Año" yaxisLabel="Cantidad" type="pie">
-                        <hf:chartSerie name="Activos"
-                                       type="#{dashBoardManagedBean.boysType}"
-                                       value="#{lineChartBean.boys}"
-                                       var="point"
-                                       point="#{point.amount}" 
-                                       tickLabel="#{point.year}"/>
-                        <hf:chartSerie colorByPoint="true"
-                                       type="#{dashBoardManagedBean.girlsType}"
-                                       name="Finalizados"
-                                       value="#{lineChartBean.girls}"
-                                       var="point"
-                                       point="#{point.amount}"  />
-                    </hf:chart> 
-                </b:column>
-            </b:row>                  
-        </h:form> 
+
+                <f:view contentType="text/html">
+                    <h1>Map Alumnos</h1>
+                    <p:gmap center="41.381542, 2.122893" zoom="15" type="HYBRID" style="width:600px;height:400px" />
+                </f:view>
+            </h:body>
+        </h:form>         
     </ui:define>
 
 </ui:composition>
