--- a/SistemaServicioSocial/SistemaServicioSocial-war/web/index.xhtml
+++ b/SistemaServicioSocial/SistemaServicioSocial-war/web/index.xhtml
@@ -1,19 +1,18 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets" template="template/layoutTemplate.xhtml"
-                xmlns:b="http://bootsfaces.net/ui"
+<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets" 
+                template="template/layoutTemplate.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:hf="http://highfaces.org" 
                 xmlns:p="http://primefaces.org/ui"
-                xmlns="http://www.w3.org/1999/xhtml">
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:b="http://bootsfaces.net/ui">
 
     <ui:define name="content">
         <h:form>
-            <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript" ></script>
             <h:body>
                 <h1>Dashboard</h1>
-
                 <h:outputLabel>Busqueda por fecha</h:outputLabel>
                 <h:panelGrid id="grid" columns="2" cellpadding="5">
                     <b:row>
@@ -47,10 +46,6 @@
                     </b:column>
                 </b:row>
 
-                <f:view contentType="text/html">
-                    <h1>Map Alumnos</h1>
-                    <p:gmap center="41.381542, 2.122893" zoom="15" type="HYBRID" style="width:600px;height:400px" />
-                </f:view>
             </h:body>
         </h:form>         
     </ui:define>
