--- a/SistemaServicioSocial/SistemaServicioSocial-war/web/principal.xhtml
+++ b/SistemaServicioSocial/SistemaServicioSocial-war/web/principal.xhtml
@@ -1,19 +1,17 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./template/layoutTemplate.xhtml"
+                template="./template/sistemaServicioSocialTemplate.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
-                xmlns:b="http://bootsfaces.net/ui"
-                xmlns="http://www.w3.org/1999/xhtml">
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="content">
         <h:form>
-            <b:well>
-                Servicio social
-            </b:well>
-            <b:panel look="primary" style="background-color: #337ab7; color: white; width: 250px;">
-                <b:iconAwesome name="fa-archive" size="4x"/>Proyectos Activo
-            </b:panel>
+            Servicio social
+            <p:panel style="background-color: #337ab7; color: white; width: 250px;">
+                <p:outputLabel value="Proyectos Activo"/>
+            </p:panel>
         </h:form>
     </ui:define>
 
